# phota

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-07-phota-cli.md  2026-06-07-phota-web-ui.md
docs/superpowers/specs/: 2026-06-07-phota-cli-design.md  2026-06-07-phota-web-ui-design.md
phota/: ai.py  cli.py  config.py  dedupe.py  engine.py  exporter.py  grouping.py  imageio.py  index.py  metadata.py  models.py  organize.py  output.py  plan.py  preview.py  providers.py  quality.py  rename.py  scan.py  server.py  store.py  thumbs.py  workflows.py
tests/: conftest.py  fixtures.py  test_ai.py  test_cli.py  test_config.py  test_dedupe.py  test_e2e.py  test_engine.py  test_export.py  test_finder.py  test_finder_tidy.py  test_fixtures.py  test_grouping.py  test_index.py  test_index_concurrency.py  test_index_progress.py  test_launch.py  test_metadata.py  test_models.py  test_organize.py  test_organize_api.py  test_output.py  test_plan.py  test_preview.py  test_providers.py  test_quality.py  test_rename.py  test_rename_api.py  test_scan.py  test_search.py  test_server_actions.py  test_server_read.py  test_smoke.py  test_store.py  test_thumbs.py  test_workflows.py
web/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  api.ts  index.css  types.ts
web/src/components/: ActionBar.tsx  AlbumRail.tsx  CullMode.tsx  ExportDialog.tsx  FolderPicker.tsx  Grid.tsx  Modal.tsx  NewFolderInput.tsx  Settings.tsx  Tile.tsx  TopBar.tsx  icons.tsx
