[project]
name = "phota"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "Pillow>=10",
    "piexif>=1.1",
    "rawpy>=0.21",
    "opencv-python-headless>=4.9",
    "numpy>=1.26",
    "ImageHash>=4.3",
    "anthropic>=0.39",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
phota = "phota.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["phota"]
