[project]
name = "phota"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "Pillow>=10",
    "piexif>=1.1",
    "rawpy>=0.21",
    "opencv-python-headless>=4.9",
    "numpy>=1.26",
    "ImageHash>=4.3",
    "anthropic>=0.39",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "pillow-heif>=0.16",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
phota = "phota.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["phota"]
